<resources>
    <string name="app_name">final_project</string>
    <string name="search_button_text">Search</string>
    <string name="search_hint">Search</string>
    <string name="user_data_key">USER_DATA</string>
    <string name="user_score">Score: %1$s</string>
    <string name="user_login">Login: %1$s</string>
    <string name="user_id">ID: %1$s</string>
    <string name="menu_about">About</string>
    <string name="image_description">avatar</string>
    <string name="user_name">Name: %1$s</string>
    <string name="placeholder_url">url</string>
    <string name="url_key">URL_KEY</string>
    <string name="user_location">Location: %1$s</string>
    <string name="user_company">Company: %1$s</string>
    <string name="user_followers">Followers: %1$s</string>
    <string name="user_gists">Public gists: %1$s</string>
    <string name="user_repos">Public repos: %1$s</string>
    <string name="user_created">Created: %1$s</string>
    <string name="user_updated">Updated: %1$s</string>
    <string name="about_app_name"><![CDATA[Link & Amber v1.0.0]]></string>
    <string name="about_create_by"><![CDATA[Create by: Link & Amber]]></string>
    <string name="about_company"><![CDATA[Algonquin College MAD&D Inc.]]></string>
    <string name="about_link_email">fang0055@algonquinlive.com</string>
    <string name="about_link_link">https://github.com/fang0055</string>
    <string name="about_amber_email">zhou0150@algonquinlive.com</string>
    <string name="about_amber_link">https://github.com/zhou0160</string>
    <string name="no_results">No results for %1$s </string>
    <string name="repos_key">REPOS_KEY</string>
    <string name="followers_key">FOLLOWERS_KEY</string>
    <string name="page_size_key">PAGE_SIZE_KEY</string>
    <string name="link_avatar">Link\'s avatar</string>
    <string name="amber_avatar">Amber\'s avatar</string>
</resources>
